<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:foreground="?attr/selectableItemBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/img_relic"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:round="8dp"
        app:srcCompat="@drawable/history_example" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/img_relic"
        app:layout_constraintStart_toEndOf="@+id/img_relic"
        app:layout_constraintTop_toTopOf="@+id/img_relic">

        <TextView
            android:id="@+id/tv_relic_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/relic_name"
            android:textSize="18sp"
            android:textStyle="bold" />
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_relic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:singleLine="true">
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_relic_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_relic_material"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/material"
                />
        </com.google.android.material.chip.ChipGroup>
        <TextView
            android:id="@+id/tv_relic_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/relic_desc"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>