<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MuseumDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_museum_detail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_museum_detail"
        android:padding="16dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/img_museum"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:round="16dp"
                />

            <TextView
                android:id="@+id/tv_museum_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/museum_intro_1"
                android:layout_marginTop="32dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_museum_intro1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/grey"
                />

            <TextView
                android:id="@+id/tv_museum_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/museum_intro_2"
                android:textSize="20sp"
                android:layout_marginTop="32dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_museum_intro2"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:textColor="@color/grey"

                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_museum_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/museum_intro_3"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="32dp"

                />

            <TextView
                android:id="@+id/tv_museum_intro3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/grey"

                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>