<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HeroDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_hero_detail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_hero_detail">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:id="@+id/img_hero"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:scaleType="matrix"
                    app:round="8dp"
                    android:layout_marginStart="16dp"
                    />
                <TextView
                    android:id="@+id/tv_hero_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="屈原"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="32dp"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/lyric"
                android:textStyle="bold"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/tv_hero_lyric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/hero_lyric"
                android:textColor="@color/grey"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/hero_abstract"
                android:textStyle="bold"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/tv_hero_abstract"
                android:layout_width="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/grey"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>