<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RelicDetailActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:elevation="0dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_relic_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">
                <androidx.constraintlayout.utils.widget.ImageFilterView
                    android:id="@+id/img_relic"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:round="8dp"
                    app:srcCompat="@drawable/history_example"
                    android:foreground="?attr/selectableItemBackground"
                    />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/img_relic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_relic"
                    app:layout_constraintTop_toTopOf="@+id/img_relic">

                    <TextView
                        android:id="@+id/tv_relic_name"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginStart="20dp"
                        android:text="@string/relic_name"
                        android:maxLines="1"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/tv_relic_abstract"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginStart="20dp"
                        android:maxLines="1"
                        android:text="@string/relic_desc" />
                    <TextView
                        android:id="@+id/tv_relic_desc_more"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/theme_color"
                        android:text="@string/more"
                        android:layout_marginStart="20dp"
                        android:foreground="?attr/selectableItemBackground"
                        />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/br"/>
            <include layout="@layout/relic_detail_desc"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/br"/>
            <include layout="@layout/relic_paper_desc"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>